# offline-renderer

./: .gitignore  CMakeLists.txt  README.md
cmake_configs/: paths.h.in
include/: Vec.h  cmake_produced_paths.h  paths.h  utils.h
src/: main.cpp
test/: CMakeLists.txt
test/include/: test_Vec.h
test/src/: main.cpp
